<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2020 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/startFragment">
    <fragment
        android:id="@+id/startFragment"
        android:name="com.example.cupcake.StartFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_start">
        <action
            android:id="@+id/action_startFragment_to_doubleOrNothingFragment"
            app:destination="@id/doubleOrNothingFragment" />
        <action
            android:id="@+id/action_startFragment_to_luckyNumberFragment"
            app:destination="@id/luckyNumberFragment" />
        <action
            android:id="@+id/action_startFragment_to_yahtzeeFragment"
            app:destination="@id/yahtzeeFragment" />
    </fragment>
    <fragment
        android:id="@+id/luckyNumberFragment"
        android:name="com.example.cupcake.LuckyNumberFragment"
        android:label="@string/play_lucky_number"
        tools:layout="@layout/fragment_lucky_number">
        <action
            android:id="@+id/action_luckyNumberFragment_to_resultsFragment"
            app:destination="@id/resultsFragment" />
        <action
            android:id="@+id/action_luckyNumberFragment_to_startFragment"
            app:destination="@id/startFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/doubleOrNothingFragment"
        android:name="com.example.cupcake.DoubleOrNothingFragment"
        android:label="@string/play_doub_or_none"
        tools:layout="@layout/fragment_double_or_nothing">
        <action
            android:id="@+id/action_doubleOrNothingFragment_to_resultsFragment"
            app:destination="@id/resultsFragment" />
        <action
            android:id="@+id/action_doubleOrNothingFragment_to_startFragment"
            app:destination="@id/startFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/yahtzeeFragment"
        android:name="com.example.cupcake.YahtzeeFragment"
        android:label="@string/play_yahtzee"
        tools:layout="@layout/fragment_yahtzee">
        <action
            android:id="@+id/action_yahtzeeFragment_to_resultsFragment"
            app:destination="@id/resultsFragment" />
        <action
            android:id="@+id/action_yahtzeeFragment_to_startFragment"
            app:destination="@id/startFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/resultsFragment"
        android:name="com.example.cupcake.ResultsFragment"
        android:label="@string/show_reults"
        tools:layout="@layout/fragment_results">
        <action
            android:id="@+id/action_resultsFragment_to_startFragment"
            app:destination="@id/startFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>