<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".StartFragment">

    <data>
        <!-- Add layout variable and type for view of corresponding start fragment -->
        <variable
            name="startFragment"
            type="com.example.cupcake.StartFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/side_margin">

            <ImageView
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:importantForAccessibility="no"
                android:scaleType="center"
                app:srcCompat="@drawable/dice_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/side_margin"
                android:text="@string/dice_games"
                android:textAppearance="?attr/textAppearanceHeadline4"
                android:textColor="@color/material_on_background_emphasis_medium" />

            <!-- Lucky Number button -->
            <Button
                android:id="@+id/choose_play_lucky_number"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:minWidth="@dimen/order_cupcake_button_width"
                android:onClick="@{() -> startFragment.chooseGame(@string/lucky_number)}"
                android:text="@string/play_lucky_number" />

            <!-- Double or Nothing button -->
            <Button
                android:id="@+id/choose_play_double_or_nothing"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:minWidth="@dimen/order_cupcake_button_width"
                android:onClick="@{() -> startFragment.chooseGame(@string/double_or_nothing)}"
                android:text="@string/play_doub_or_none" />

            <!-- Yahtzee button -->
            <Button
                android:id="@+id/choose_play_yahtzee"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:minWidth="@dimen/order_cupcake_button_width"
                android:onClick="@{() -> startFragment.chooseGame(@string/yahtzee)}"
                android:text="@string/play_yahtzee" />
        </LinearLayout>
    </ScrollView>
</layout>