<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LuckyNumberFragment">

    <data>
        <!-- Add layout variable and type for view of corresponding kt file -->
        <variable
            name="viewModel"
            type="com.example.cupcake.games.GameFunctions" />

        <!-- Add layout variable and type for view of fragment -->
        <variable
            name="luckyNumberFragment"
            type="com.example.cupcake.LuckyNumberFragment" />
    </data>

    <!-- Scroll view of whole game -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Constraint layout for components -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/side_margin">

            <!-- Die for roll -->
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="200dp"
                android:contentDescription="@string/image1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/dice_1" />

            <!-- Roll dice -->
            <Button
                android:id="@+id/button"
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:layout_marginTop="340dp"
                android:onClick="@{() -> luckyNumberFragment.playGame()}"
                android:text="@string/roll"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Cancel game -->
            <Button
                android:id="@+id/cancel_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:layout_marginTop="450dp"
                android:onClick="@{() -> luckyNumberFragment.quit()}"
                android:text="@string/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>