<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DoubleOrNothingFragment">

    <data>
        <!-- Add layout variable and type for view of corresponding kt file -->
        <variable
            name="viewModel"
            type="com.example.cupcake.games.GameFunctions" />

        <!-- Add layout variable and type for view of FlavorFragment -->
        <variable
            name="doubleOrNothingFragment"
            type="com.example.cupcake.DoubleOrNothingFragment" />
    </data>

    <!-- Scroll view of whole game -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Constraint layout for components -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/side_margin">

            <!-- Guess options -->
            <RadioGroup
                android:id="@+id/date_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <!-- Guess double -->
                <RadioButton
                    android:id="@+id/option1"

                    android:checked="@{viewModel.bet.equals(true)}"
                    android:onClick="@{() -> viewModel.setBet(true)}"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Double" />

                <!-- Guess nothing -->
                <RadioButton
                    android:id="@+id/option2"

                    android:checked="@{viewModel.bet.equals(false)}"
                    android:onClick="@{() -> viewModel.setBet(false)}"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nothing" />
            </RadioGroup>

            <!-- 1st die -->
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="200dp"
                android:layout_marginEnd="200dp"
                android:layout_marginRight="200dp"
                android:contentDescription="@string/image1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/dice_1" />

            <!-- 2nd die -->
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="200dp"
                android:contentDescription="@string/image2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/dice_1" />

            <!-- Roll dice -->
            <Button
                android:id="@+id/button"
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:layout_marginTop="340dp"
                android:onClick="@{() -> doubleOrNothingFragment.playGame()}"
                android:text="@string/roll"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Cancel game -->
            <Button
                android:id="@+id/cancel_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:layout_marginTop="450dp"
                android:onClick="@{() -> doubleOrNothingFragment.quit()}"
                android:text="@string/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>